Include qubes-core-agent-passwordless-root on Qubes 4.0
https://phabricator.whonix.org/T697

--- a/debian/control
+++ b/debian/control
@@ -65,6 +65,7 @@ Depends: gnome-packagekit,
  libnotify-bin,
  mate-notification-daemon,
  python-nautilus,
+ qubes-core-agent (<< 4.0.0-1) | qubes-core-agent-passwordless-root,
  ${misc:Depends}
 Description: Recommended packages for Qubes-Whonix-Gateway and Qubes-Whonix-Workstation
  A metapackage, which includes recommended packages to ensure, Qubes-Whonix
